--- a/src/product-catalog/Dockerfile
+++ b/src/product-catalog/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.22-alpine AS builder
+FROM golang:1.24-alpine AS builder
 
 WORKDIR /usr/src/app/
 
@@ -7,15 +7,16 @@ RUN --mount=type=cache,target=/go/pkg/mod \
     --mount=type=cache,target=/root/.cache/go-build \
     mkdir -p /root/.cache/go-build
 
-# Copy
+# Copy go.mod and go.sum
 COPY go.mod go.sum ./
 
-# Download
+# Download dependencies
 RUN go mod download
 
 # Copy the rest of the source code
 COPY . .
 
+# Build the app
 RUN go build -o product-catalog .
 
 ####################################
@@ -24,8 +25,13 @@ FROM alpine AS release
 
 WORKDIR /usr/src/app/
 
+# Copy products directory
 COPY ./products/ ./products/
-COPY --from=builder /usr/src/app/product-catalog/ ./
 
-ENV PRODUCT_CATALOG_PORT 8088
-ENTRYPOINT [ "./product-catalog" ]
+# Copy the built binary from builder
+COPY --from=builder /usr/src/app/product-catalog ./
+
+# Set environment variable (fixed format)
+ENV PRODUCT_CATALOG_PORT=8088
+
+ENTRYPOINT ["./product-catalog"]
